--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">SMSTRANS</string>
+    <string name="app_name">短信路由心跳版</string>
 
-    <string name="ip">192.168.0.175</string>
+    <string name="ip">192.168.1.100</string>
     <string name="Port">12543</string>
     <string name="hint_ip">IP地址：</string>
     <string name="hint_port">端口号：</string>
